# simple-rust-discord-bot

./: .env.example  Cargo.toml  README.md
src/: main.rs
src/commands/: assistant_manager_status.rs  manager_status.rs  mod.rs  ping.rs  player_info.rs  rank.rs  staff_management.rs  team_info.rs
src/handlers/: firebase.rs
src/services/: player_service.rs
src/utils/: discord.rs  mod.rs  roblox.rs
