[package]
name = "v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {default-features = false, features = ["client", "gateway", "rustls_backend", "model"], version = "0.11"}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
firebase-rs = "2.0.8"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11.20"
optional_struct = "0.3.1"
serde_json = "1.0.105"
json = "0.12.4"